--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Price Prediction</title>
     <style>
+
+        body {
+            padding-bottom:40px;
+            padding-left:10px;
+            pdding_right:20px;
+        }
         .container {
             display: flex;
             justify-content: space-between;
